Fixed Theming errors

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -7,6 +7,8 @@
   "Forgot password": "نسيت كلمة المرور",
   "Register": "تسجيل",
   "Email": "البريد الإلكتروني",
+  "Session Expired": "انتهت الجلسة",
+  "Please login again.": ".يرجى تسجيل الدخول مرة أخرى",
   "Projects": "المشاريع",
   "Name": "الاسم",
   "Description": "الوصف",
