--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,6 +6,8 @@
   "Forgot Password": "Forgot Password",
   "Remember Me": "Remember Me",
   "Email": "Email",
+  "Session Expired": "Session Expired",
+  "Please login again.": "Please login again.",
   "Projects": "Projects",
   "Name": "Name",
   "Description": "Description",
