Done till projects fetching
Error in useQuery, infinite loop

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -3,12 +3,20 @@
   "Username": "اسم المستخدم",
   "Password": "كلمة المرور",
   "Enter your email below to login to your account": "أدخل بريدك الإلكتروني أدناه لتسجيل الدخول إلى حسابك",
+  "Enter your credentials below to register an account.": "أدخل البيانات الخاصة بك لإنشاء حساب جديد.",
   "Remember me": "تذكرني",
   "Forgot password": "نسيت كلمة المرور",
-  "Register": "تسجيل",
+  "Register": "إنشاء حساب",
+  "Don't have an account?": "ليس لديك حساب؟",
+  "Already have an account?": "لديك حساب؟",
+  "forgot password?": "نسيت كلمة المرور؟",
+  "Password must be 8 characters long": "يجب أن تكون كلمة المرور طولها 8 أحرف",
+  "Password must have at least one uppercase letter": "يجب أن تحتوي كلمة المرور على حرف uppercase واحد على الأقل",
+  "Password must have one special character": "يجب أن تحتوي كلمة المرور على حرف special واحد على الأقل",
+  "Password must have at least one number": "يجب أن تحتوي كلمة المرور على رقم واحد على الأقل",
   "Email": "البريد الإلكتروني",
-  "Session Expired": "انتهت الجلسة",
-  "Please login again.": ".يرجى تسجيل الدخول مرة أخرى",
+  "Session expired please login again.": "انتهت الجلسة الرجاء تسجيل الدخول مرة اخرى.",
+  "Sorry, server unreachable at the moment.": "عذرا، الخدمة غير متاحة في الوقت الحالي.",
   "Projects": "المشاريع",
   "Name": "الاسم",
   "Description": "الوصف",
@@ -17,7 +25,7 @@
   "Delete": "حذف",
   "Save": "حفظ",
   "Cancel": "إلغاء",
-  "Logout": "تسجيل الخروج",
+  "Log out": "تسجيل الخروج",
   "Tickets": "التذاكر",
   "Members": "الأعضاء",
   "Start Date": "تاريخ البدء",
@@ -32,5 +40,13 @@
   "Completed": "منتهي",
   "Cancelled": "ملغى",
   "Under Review": "قيد المراجعة",
-  "Draft": "مسودة"
+  "Draft": "مسودة",
+  "Search products": "البحث عن المنتجات",
+  "My account": "حسابي",
+  "Arabic": "العربية",
+  "English": "الإنجليزية",
+  "Table": "جدول",
+  "Board": "لوحة",
+  "Add Members": "إضافة أعضاء",
+  "Set To Cancelled": "تعيين إلى ملغى"
 }
