--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,12 +2,21 @@
   "Login": "Login",
   "Username": "Username",
   "Enter your email below to login to your account": "Enter your email below to login to your account",
+  "Enter your credentials below to register an account.": "Enter your credentials below to register an account.",
   "Password": "Password",
   "Forgot Password": "Forgot Password",
   "Remember Me": "Remember Me",
+  "Don't have an account?": "Don't have an account?",
+  "Already have an account?": "Already have an account?",
+  "forgot password?": "forgot password?",
+  "Password must be 8 characters long": "Password must be 8 characters long",
+  "Password must have at least one uppercase letter": "Password must have at least one uppercase letter",
+  "Password must have one special character": "Password must have one special character",
+  "Password must have at least one number": "Password must have at least one number",
   "Email": "Email",
-  "Session Expired": "Session Expired",
-  "Please login again.": "Please login again.",
+  "Log out": "Log out",
+  "Session expired please login again.": "Session expired please login again.",
+  "Sorry, server unreachable at the moment.": "Sorry, server unreachable at the moment.",
   "Projects": "Projects",
   "Name": "Name",
   "Description": "Description",
@@ -31,5 +40,14 @@
   "Completed": "Completed",
   "Cancelled": "Cancelled",
   "Under Review": "Under Review",
-  "Draft": "Draft"
+  "Draft": "Draft",
+  "High": "High",
+  "Search products": "Search products",
+  "My account": "My account",
+  "Arabic": "Arabic",
+  "English": "English",
+  "Table": "Table",
+  "Board": "Board",
+  "Add Members": "Add Members",
+  "Set To Cancelled": "Set To Cancelled"
 }
