Better password description

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -10,10 +10,10 @@
   "Don't have an account?": "ليس لديك حساب؟",
   "Already have an account?": "لديك حساب؟",
   "forgot password?": "نسيت كلمة المرور؟",
-  "Password must be 8 characters long": "يجب أن تكون كلمة المرور طولها 8 أحرف",
-  "Password must have at least one uppercase letter": "يجب أن تحتوي كلمة المرور على حرف uppercase واحد على الأقل",
-  "Password must have one special character": "يجب أن تحتوي كلمة المرور على حرف special واحد على الأقل",
-  "Password must have at least one number": "يجب أن تحتوي كلمة المرور على رقم واحد على الأقل",
+  "At least 8 characters long": "على الاقل 8 أحرف",
+  "At least 1 capital letter": "على الاقل حرف uppercase واحد",
+  "At least 1 special character": "على الاقل حرف special واحد",
+  "At least 1 number": "على الاقل رقم واحد",
   "Email": "البريد الإلكتروني",
   "Session expired please login again.": "انتهت الجلسة الرجاء تسجيل الدخول مرة اخرى.",
   "Sorry, server unreachable at the moment.": "عذرا، الخدمة غير متاحة في الوقت الحالي.",
