--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,10 +9,10 @@
   "Don't have an account?": "Don't have an account?",
   "Already have an account?": "Already have an account?",
   "forgot password?": "forgot password?",
-  "Password must be 8 characters long": "Password must be 8 characters long",
-  "Password must have at least one uppercase letter": "Password must have at least one uppercase letter",
-  "Password must have one special character": "Password must have one special character",
-  "Password must have at least one number": "Password must have at least one number",
+  "At least 8 characters long": "At least 8 characters long",
+  "At least 1 capital letter": "At least 1 capital letter",
+  "At least 1 special character": "At least 1 special character",
+  "At least 1 number": "At least 1 number",
   "Email": "Email",
   "Log out": "Log out",
   "Session expired please login again.": "Session expired please login again.",
