fix(register): now working, added more words for translation

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -48,5 +48,9 @@
   "Table": "جدول",
   "Board": "لوحة",
   "Add Members": "إضافة أعضاء",
-  "Set To Cancelled": "تعيين إلى ملغى"
+  "Set To Cancelled": "تعيين إلى ملغى",
+  "Search by project name...": "البحث بواسطة اسم المشروع....",
+  "New": "جديد",
+  "Settings": "الإعدادات",
+  "Open": "فتح"
 }
