fix(projects): minor changes

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -52,5 +52,6 @@
   "Search by project name...": "البحث بواسطة اسم المشروع....",
   "New": "جديد",
   "Settings": "الإعدادات",
-  "Open": "فتح"
+  "Open": "فتح",
+  "Notifications": "الإشعارات"
 }
