--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -53,5 +53,6 @@
   "Search by project name...": "Search by project name...",
   "New": "New",
   "Settings": "Settings",
-  "Open": "Open"
+  "Open": "Open",
+  "Notifications": "Notifications"
 }
