Update translation files for Arabic and English locales

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -53,5 +53,7 @@
   "New": "جديد",
   "Settings": "الإعدادات",
   "Open": "فتح",
-  "Notifications": "الإشعارات"
+  "Notifications": "الإشعارات",
+  "Dates": "التواريخ",
+  "Owner": "المالك"
 }
