--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -54,5 +54,7 @@
   "New": "New",
   "Settings": "Settings",
   "Open": "Open",
-  "Notifications": "Notifications"
+  "Notifications": "Notifications",
+  "Dates": "Dates",
+  "Owner": "Owner"
 }
