refactor: Add "Filter" translation to Arabic and English locales, and update mutation dialog and filters components

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -55,5 +55,6 @@
   "Open": "فتح",
   "Notifications": "الإشعارات",
   "Dates": "التواريخ",
-  "Owner": "المالك"
+  "Owner": "المالك",
+  "Filter": "فلترة"
 }
