--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -56,5 +56,6 @@
   "Open": "Open",
   "Notifications": "Notifications",
   "Dates": "Dates",
-  "Owner": "Owner"
+  "Owner": "Owner",
+  "Filter": "Filter"
 }
